--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<link rel="shortcut icon" href="img/website.ico">
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="description" content="Michelle Nguyen's Information">
+  <meta name="author" content="862322473">
 
-  <title>John Doe - Business Administration</title>
+  <title>Michelle Nguyen - Psychology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Michelle Nguyen</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
       </span>
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Michelle Nguyen
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology📚</div>
+        <p class="lead mb-4">I am a second-year student working towards a Bachelor of Arts of Psychology at the University of California, Riverside. As a Psychology major, I am curious about how human cognition, emotions, and experiences contribute to our daily lives, whether in the workplace, education, and relationships. I am seeking to expand on my interest by obtaining internships in the fields of Industrial-Organizational Psychology, Human Resources, and Marketing. I am bilingual and fluent in English and Vietnamese. Additionally, I have worked with softwares including Excel, Photoshop, and Microsoft Word.<br><br>
 
-        Enter bio here<br><br>
+         I have worked as a Journalist, Editor, and Researcher for a non-profit mental health organization, Arts For Relief. During my time there, I was able to conduct research regarding different ethnic, racial, and social groups; specifically, I studied different backgrounds and how these backgrounds shaped the beliefs and reactions to mental health in these communities. During this time, I also worked alongside a diverse group of students with different abilities and talents. I was able to coordinate and communicate effectively with everyone in order to get articles and infographics out in a timely manner. <br><br>
 
-        Enter bio here
+       In college, I discovered that I had a skill for attention to detail to peoples’ perception, personalities, and interests. Thus, I began my role as a Social Media and Marketing Assistant at the College of Humanities, Arts, and Social Sciences. On an everyday basis, I work with my student peers to edit, photograph, and advertise the unique and diverse parts of CHASS to different demographics, including but not limited to UCR students, staff, incoming students, potential students, and alumni. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/michelle-nguyen-01591b1b7/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/michellenoowin">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://instagram.com/michellenoowin">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:mnguy514.ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +95,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Photography, Graphic Design, Video editing, Photoshop<br> 
+              • Communicative, Team building, Open-minded<br>
+              • Experience with Project Planning, Social Media Management, and Digital Marketing<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,33 +107,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Social Media and Marketing Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://chass.ucr.edu/">UCR CHASS</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Brainstorm and execute social media promotions to boost enrollment and interest in CHASS<br>
+              • Utilize editing softwares and graphic design<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">Oct 2022 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Junior Editor, Researcher, Writer, Graphic Designert</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://artsforrelief.wixsite.com/official">Arts for Relief</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Produced monthly infographics/articles to educate followers on mental health/illness and to encourage donations for mental-health related funds <br>
+            • Reviewed and provided feedback to peers<br>
+            •  Designed aesthetically pleasing flyers to increase following and shares across social media platforms<br>
+            • Raised funds for mental health organizations<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2020 - June 2021</span>
           </div>
         </div>
 
@@ -152,11 +152,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">BA in Psychology</div>
+            <div>Bachelor of Arts, Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021 - June 2025</span>
           </div>
         </div>
 
@@ -189,10 +189,13 @@
 
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
-        <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+       <h2 class="mb-5">Portfolio</h1>
+<center>
+    <img src="img/image1.PNG" width="500px">
+    <img src="img/image2.JPG" width="500px"><br>
+    <img src="img/image3.JPG" width="500px">
+    <img src="img/image4.JPG" width="500px"><br>
+</center>
       </div>
     </section>
 
